<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_number_verification.view.UserNumberVerificationFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_zhealth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="@dimen/_6sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewUserActivation"
        style="@style/BaseTextStyleBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/new_user_activation"
        android:textColor="@color/default_black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneNumber"
        style="@style/BaseTextStyleBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/phone_number"
        android:textColor="@color/default_black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewUserActivation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_otp_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhoneNumber"
            style="@style/BaseTextStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_20sdp"
            android:paddingEnd="@dimen/_130sdp"
            android:singleLine="true"
            android:textColor="@color/default_black"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry"
            android:backgroundTint="@color/e5e5e5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/btnSendOtp"
            style="@style/BaseTextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/send_code"
            android:gravity="center_vertical"
            android:focusable="true"
            android:clickable="true"
            android:textColor="@color/default_black"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_ripple"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="gone"
        android:id="@+id/tvOtpVerificationCode"
        style="@style/BaseTextStyleBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/verification_code"
        android:textColor="@color/default_black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_otp_phone_number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:visibility="gone"
        android:id="@+id/etOtp"
        style="@style/BaseTextStyleRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_verification_code"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingEnd="@dimen/_130sdp"
        android:singleLine="true"
        android:textColor="@color/default_black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOtpVerificationCode"
        tools:ignore="RtlSymmetry"
        android:backgroundTint="@color/e5e5e5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmitCode"
        style="@style/BaseTextStyleBold"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_27sdp"
        android:background="@drawable/shape_lef_right_arch"
        android:backgroundTint="@color/default_black"
        android:paddingStart="@dimen/_20sdp"
        android:clickable="true"
        android:elevation="@dimen/_2sdp"
        android:focusable="true"
        android:gravity="center"
        android:text="Proceed"
        android:textColor="@color/appWhite"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOtp"
        app:drawableStartCompat="@drawable/ic_go"
        app:drawableTint="@color/white"
        android:drawablePadding="-10dp"
        tools:ignore="RtlSymmetry"
        android:textAllCaps="false"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>